# live555forAndroid

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jxdinfo/live555/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/BasicUsageEnvironment/: CMakeLists.txt
app/src/main/cpp/UsageEnvironment/: CMakeLists.txt
app/src/main/cpp/groupsock/: CMakeLists.txt  GroupsockHelper.cpp
app/src/main/cpp/include/openssl/: conf.h  evp.h  opensslconf.h  ssl.h
app/src/main/cpp/liveMedia/: CMakeLists.txt  GenericMediaServer.cpp  HMAC_SHA1.cpp  RTSPServer.cpp  SRTPCryptographicContext.cpp  TLSState.cpp
app/src/main/cpp/liveMedia/include/: TLSState.hh
app/src/main/cpp/openssl/include/: aes.h  evp.h  ossl_typ.h
app/src/main/java/com/jxdinfo/live555/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/jxdinfo/live555/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
